deployment/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-patitoserver
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: patitoserver.watunt.lat
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: patitoserver
                port:
                  number: 80
